--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   nav {
     display: flex;
     justify-content: space-around;
-    width: 50vh;
+    width: 60vh; /* Ò_Ó */
   }
   .active {
     color:black ;
