--- a/style.css
+++ b/style.css
@@ -60,12 +60,12 @@
     font-size: 25px;
   }
   .but1{
-    background: red;
-    color: greenyellow;
+    background: yelloy;
+    color: purple;
   }
   .but2{
-    background: orange;
-    color: blue;
+    background: red;
+    color: green;
   }
 
   /* 3 art */
